fix: remove too narrow width

--- a/app/component/itinerary/navigator/navigator.scss
+++ b/app/component/itinerary/navigator/navigator.scss
@@ -281,7 +281,6 @@
 
       .vehicle-leg {
         display: flex;
-        width: 80%;
         text-align: left;
       }
     }
